@@ -20,6 +20,7 @@ Cacti CHANGELOG
 -issue#5534: When deleting a single Data Source the table data_debug is not purged
 -issue#5542: When a form element does not include a 'value' column, provide a more helpful warning message 
 -issue#5554: Interface description with equal sign (=) in ifAlias does not show Alias
+-issue#5555: Aggregate graph does not show other percentiles
 -issue#5561: Settings table custom size reverted by database repair
 -issue#5564: Device list empty due to SQL error 
 -issue#5565: Incorrect variable name in change_device cli script
